--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@headlessui/react": "^2.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.1.2",
     "@react-oauth/google": "^0.12.1",
     "@tanstack/react-query": "^5.62.3",
