--- a/backend/package.json
+++ b/backend/package.json
@@ -30,12 +30,14 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/platform-socket.io": "^11.1.11",
+    "@nestjs/swagger": "^11.2.3",
     "@nestjs/websockets": "^11.1.11",
     "@prisma/client": "^6.19.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
+    "express-basic-auth": "^1.2.1",
     "handlebars": "^4.7.8",
     "mjml": "^4.18.0",
     "nodemailer": "^7.0.12",
