--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI/CD
+name: Backend
 
 on:
   push:
@@ -10,9 +10,6 @@ jobs:
   backend-ci:
     name: Backend CI
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: backend
     steps:
       - uses: actions/checkout@v4
 
@@ -21,52 +18,31 @@ jobs:
         with:
           node-version: "20"
           cache: "npm"
+          cache-dependency-path: package-lock.json
 
       - name: Install dependencies
         run: npm install
-        working-directory: .
 
       - name: Generate Prisma Client
         run: npx prisma generate
+        working-directory: backend
 
       - name: Run Lint
         run: npm run lint
+        working-directory: backend
 
       - name: Run Tests
         run: npm run test
+        working-directory: backend
 
       - name: Run Build
         run: npm run build
-
-  frontend-ci:
-    name: Frontend CI
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: frontend
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: "npm"
-
-      - name: Install dependencies
-        run: npm install
-        working-directory: .
-
-      - name: Run Lint
-        run: npm run lint
-
-      - name: Run Build
-        run: npm run build
+        working-directory: backend
 
   docker-build-check:
     name: Docker Build Check
     runs-on: ubuntu-latest
-    needs: [backend-ci, frontend-ci]
+    needs: [backend-ci]
     steps:
       - uses: actions/checkout@v4
 
@@ -78,13 +54,6 @@ jobs:
         with:
           context: .
           file: ./backend/Dockerfile
-          push: false
-
-      - name: Build Frontend Image (Dry Run)
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./frontend/Dockerfile
           push: false
 
   deploy:
