--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Backend
+name: Backend CI
 
 on:
   push:
@@ -41,6 +41,7 @@ jobs:
 
   docker-build-check:
     name: Docker Build Check
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop')
     runs-on: ubuntu-latest
     needs: [backend-ci]
     steps:
