--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,9 +11,9 @@ jobs:
     name: Backend CI
     runs-on: ubuntu-latest
     env:
-      DATABASE_URL: "postgresql://postgres.xtvjvmhweivhonbybxjc:qFW8qmENRzL7zQO5@aws-1-us-east-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
-      DIRECT_URL: "postgresql://postgres.xtvjvmhweivhonbybxjc:qFW8qmENRzL7zQO5@aws-1-us-east-1.pooler.supabase.com:5432/postgres"
-      JWT_SECRET: "dummy_secret_for_ci"
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      DIRECT_URL: ${{ secrets.DIRECT_URL }}
+      JWT_SECRET: ${{ secrets.JWT_SECRET }}
     steps:
       - uses: actions/checkout@v4
 
