--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "advanced-notes-app",
+  "name": "advanced-notes-app-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +10,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "format": "prettier --write .",
-    "prepare": "node -e \"if (process.env.NODE_ENV !== 'production') { try { require('husky').install() } catch (e) {} }\""
+    "prepare": "node -e \"if (!process.env.CI && process.env.NODE_ENV !== 'production') process.exit(require('child_process').spawnSync('husky', {shell:true, stdio:'inherit'}).status)\""
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -22,7 +22,6 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@react-oauth/google": "^0.12.1",
     "@tanstack/react-query": "^5.62.3",
-    "@types/axios": "^0.14.4",
     "axios": "^1.7.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
