--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "start": "concurrently \"npm run start -w backend\" \"npm run start -w frontend\"",
     "format": "npm run format -w backend && npm run format -w frontend",
     "lint": "npm run lint -w backend && npm run lint -w frontend",
-    "prepare": "husky"
+    "prepare": "node -e \"if (!process.env.CI && process.env.NODE_ENV !== 'production') process.exit(require('child_process').spawnSync('husky', {shell:true, stdio:'inherit'}).status)\""
   },
   "lint-staged": {
     "backend/src/**/*.ts": [
@@ -32,9 +32,8 @@
     "@commitlint/cli": "^20.3.1",
     "@commitlint/config-conventional": "^20.3.1",
     "concurrently": "^8.2.2",
-    "lint-staged": "^16.2.7"
-  },
-  "dependencies": {
+    "lint-staged": "^16.2.7",
     "husky": "^9.1.7"
-  }
+  },
+  "dependencies": {}
 }
