feat: setup supabase and also rewrite task list handling from socket to supabase realtime (ADV-48)

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,5 @@
 VITE_BACKEND_MAIN_PATH=http://localhost:4000/api
 VITE_SOCKET_URL=http://localhost:4000
 VITE_GOOGLE_CLIENT_ID=your_google_client_id.apps.googleusercontent.com
+VITE_SUPABASE_URL=your_supabase_url
+VITE_SUPABASE_PUBLISHABLE_KEY=your_supabase_publishable_key
