--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,13 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
-    "@headlessui/react": "^2.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@react-oauth/google": "^0.12.1",
     "@supabase/supabase-js": "2.47.1",
     "@tanstack/react-query": "^5.62.3",
