--- a/.github/workflows/gemini-code-review.yml
+++ b/.github/workflows/gemini-code-review.yml
@@ -18,18 +18,17 @@ jobs:
           fetch-depth: 0
 
       - name: Gemini Code Review
-        uses: anc95/ChatGPT-CodeReview@main
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-          USE_MODEL: gemini-1.5-flash
-          LANGUAGE: English
-          PROMPT: |
+        uses: sshnaidm/gemini-code-review-action@v1
+        with:
+          gemini-key: ${{ secrets.GEMINI_API_KEY }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          model: "gemini-1.5-flash"
+          prompt: |
             You are a senior full-stack architect. Analyze the changes in this Pull Request thoroughly.
-            Focus your review on the following critical areas:
-            1. **Optimization & Performance**: Is the code efficient? Check for unnecessary re-renders, expensive computations, or redundant logic.
-            2. **Safety & Side Effects**: Identify potential bugs, memory leaks, race conditions, or security risks.
-            3. **Architecture & Design Patterns**: Does the code align with the established project structure and best practices? Check for proper use of hooks, state management, and separation of concerns.
-            4. **Code Quality & Maintenance**: Ensure the code is clean, readable, and properly typed in TypeScript.
+            Focus your review on these critical areas:
+            1. **Optimization & Performance**: Efficiency, re-renders, expensive computations.
+            2. **Safety & Side Effects**: Bugs, memory leaks, race conditions, security risks.
+            3. **Architecture**: Project structure, hooks, state management alignment.
+            4. **Code Quality**: Cleanliness, readability, TypeScript typing.
 
-            Provide concise, actionable feedback in English. If the code is well-written and follows best practices, do not leave unnecessary comments.
+            Provide concise, actionable feedback in English. If the code is excellent, just say "Approved".
